# test

./: CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  installation.rst  usage.rst
