[tool.poetry]
name = "test"
version = "0.1.0"
description = "Python package that does something cool"
authors = ["Simardeep Kaur <simardeep.kaur.jeji@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
